mysql/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: mysql-network-policy

spec:
  podSelector:
    matchLabels:
      app: mysql

  policyTypes:
    - Ingress

  ingress:

    - from:

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: backend

          podSelector:
            matchLabels:
              app: backend

      ports:

        - protocol: TCP
          port: 3306
